[project]
name = "ayapi"
version = "0.1.0"
description = "FastAPI wrapper for Python-only AI functionality"
authors = [{ name = "Vegard Egeland", email = "vegardegeland@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[[tool.poetry.packages]]
include = "ayapi"
from = "src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
src_paths = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
